simplify alpinejs load

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       padding-top: 10px;
     }
   </style>
-  <script src="https://unpkg.com/alpinejs" defer></script>
+  <script src="//unpkg.com/alpinejs" defer></script>
   <script>
     const SUBDIRS = ['linux-64', 'osx-64', 'osx-arm64', 'win-64', 'noarch'];
     const flattenRepodata = (data) => {
