--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>rattler-index</title>
+  <title>esri-forge</title>
   <style type="text/css">
     a, a:active {
       text-decoration: none; color: blue;
@@ -81,7 +81,7 @@
 </script>
 </head>
 <body>
-  <h1>rattler-index</h1>
+  <h1>esri-forge</h1>
   <div x-data="{ pkgData: {} }" x-init="pkgData = await fetchPkgs()">
   <template x-for="subdir in pkgData.subdirs">
     <div class="subdir" x-bind:id="subdir">
